fix flag z-index on safari

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html, body {
 #container {
 	position: relative;
 	height: auto;
-	top: 0vh;
+	top: -11vh;
 	width: 100%;
 	overflow: hidden;
 	background-image: url("../pngs/sky.png");
@@ -29,10 +29,10 @@ body {
 
 #myProgress {
 	position: absolute;
-	top: 0px;
+	top: 0;
 	left: 0px;
 	width: 100%;
-	height: 1vh;
+	height: 12vh;
 	background-color: #4E5B84;
 }
 
@@ -86,7 +86,7 @@ h3 {
 	position: relative;
 	width: 80%;
 	margin: auto;
-	padding-top: 10vh;
+	padding-top: 21vh;
 }
 
 #info {
@@ -127,6 +127,7 @@ input[type=button]:hover {
 }
 
 #castle {
+	-webkit-transform: translate3d(0,0,0);
 	position: relative;
 	z-index:1;
 	width: 500px;
@@ -136,6 +137,7 @@ input[type=button]:hover {
 }
 
 #castletop{
+	-webkit-transform: translate3d(0,0,0);
 	position: absolute;
 	z-index:-2;
 	bottom: 120px;
@@ -144,6 +146,7 @@ input[type=button]:hover {
 }
 
 #castlebottom {
+	-webkit-transform: translate3d(0,0,0);
 	position: absolute;
 	z-index:1;
 	width: 308px;
@@ -152,12 +155,12 @@ input[type=button]:hover {
 }
 
 #flag {
+	-webkit-transform: translate3d(0,0,0);
 	position: absolute;
 	left: 228px;
 	bottom: 355px;
 	opacity: 0;
 	z-index:-3;
-	-webkit-transform: translate3d(0,0,0);
 	-webkit-animation: raise 5s normal linear;
 	-moz-animation: raise 5s normal linear;
 	animation: raise 5s normal linear;
